added some additional references to intro

--- a/2019_neurips_vigil/intro.tex
+++ b/2019_neurips_vigil/intro.tex
@@ -2,7 +2,7 @@
 
 In recent years there has been substantial progress in sys-tems  that  can  find  factual  answers  in  text,  starting  withIBM’s Watson system~\cite{ferrucci2010building}
 
-, and now withhigh-performing neural systems that can answer short ques-tions provided they are given a text that contains the answer(e.g., Seo et al., 2016; Wang et al., 2018).
+, and now with high-performing neural systems that can answer short ques-tions provided they are given a text that contains the answer e.g.~\cite{wang2018glue}
 
 
 AI  has  achieved  remarkable  mastery  over  games  such  asChess, Go, and Poker, and evenJeopardy!, but the rich variety of standardized exams has remained a landmark chal-lenge.   Even  in  2016,  the  best  AI  system  achieved  merely 59.3\% on an 8th Grade science exam challenge (Schoenicket al., 2016).
@@ -19,6 +19,7 @@ learning algoritms
 learning reasoning~\cite{graves2016hybrid}
 
 
+\cite{levesque2012winograd}
 
 visual reasoning~\cite{mogadala2019trends} - datasets such as COG~\cite{yang2018dataset} and 
 SVQA (Synthetic Video Question Answering)~\cite{song2018explore}
@@ -32,6 +33,7 @@ transformer-based solutions~\cite{vaswani2017attention} using self-attention
 “The current neural network approaches will find it difficult to determine which combinations of ‘later’, ‘earlier’, ‘more’, and ‘less’ constitute ‘increase’ and which constitute ‘decrease,'” Davis says. “Neural networks have no inherent idea of magnitude or of time.”
 ~\cite{davis2016write}
 
+bAbI~\cite{weston2015towards}
 
 Visual Dialog~\cite{das2017visual} - the same, they keep the whole history of the dialog in memory
 
