--- a/2019_neurips_vigil/vigil_2019_main.tex
+++ b/2019_neurips_vigil/vigil_2019_main.tex
@@ -90,7 +90,7 @@
 \newcommand{\whead}{w^{\mathrm{write}}}
 
 
-\title{Visually Grounded Reasoning about Temporal Context with Selective Attention Memory Network}
+\title{Visually Grounded Reasoning with Temporal Context using the Selective Attention Memory Network}
 
 \author{T.S. Jayram, Vincent Albouy, Tomasz Kornuta, Ahmet Ozcan}
 
