--- a/cog_bibliography.bib
+++ b/cog_bibliography.bib
@@ -43,7 +43,7 @@
 
 @Article{clark2019f,
   author  = {Clark, Peter and Etzioni, Oren and Khot, Tushar and Mishra, Bhavana Dalvi and Richardson, Kyle and Sabharwal, Ashish and Schoenick, Carissa and Tafjord, Oyvind and Tandon, Niket and Bhakthavatsalam, Sumithra and others},
-  title   = {{From'F'to'A'on the NY Regents Science Exams: An Overview of the Aristo Project}},
+  title   = {{From 'F' to 'A' on the NY Regents Science Exams: An Overview of the Aristo Project}},
   journal = {arXiv preprint arXiv:1909.01958},
   year    = {2019},
 }
@@ -136,6 +136,27 @@
   year         = {2018},
   pages        = {729--745},
   organization = {Springer},
+}
+
+@Article{weston2015towards,
+  author  = {Weston, Jason and Bordes, Antoine and Chopra, Sumit and Rush, Alexander M and van Merri{\"e}nboer, Bart and Joulin, Armand and Mikolov, Tomas},
+  title   = {Towards ai-complete question answering: A set of prerequisite toy tasks},
+  journal = {arXiv preprint arXiv:1502.05698},
+  year    = {2015},
+}
+
+@Article{wang2018glue,
+  author  = {Wang, Alex and Singh, Amanpreet and Michael, Julian and Hill, Felix and Levy, Omer and Bowman, Samuel R},
+  title   = {Glue: A multi-task benchmark and analysis platform for natural language understanding},
+  journal = {arXiv preprint arXiv:1804.07461},
+  year    = {2018},
+}
+
+@InProceedings{levesque2012winograd,
+  author    = {Levesque, Hector and Davis, Ernest and Morgenstern, Leora},
+  title     = {The winograd schema challenge},
+  booktitle = {Thirteenth International Conference on the Principles of Knowledge Representation and Reasoning},
+  year      = {2012},
 }
 
 @Comment{jabref-meta: databaseType:bibtex;}
