--- a/cog_bibliography.bib
+++ b/cog_bibliography.bib
@@ -159,4 +159,26 @@
   year      = {2012},
 }
 
+@Article{sternberg2008increasing,
+  author    = {Sternberg, Robert J},
+  title     = {Increasing fluid intelligence is possible after all},
+  journal   = {Proceedings of the National Academy of Sciences},
+  year      = {2008},
+  volume    = {105},
+  number    = {19},
+  pages     = {6791--6792},
+  publisher = {National Acad Sciences},
+}
+
+@Article{gray2003neural,
+  author    = {Gray, Jeremy R and Chabris, Christopher F and Braver, Todd S},
+  title     = {Neural mechanisms of general fluid intelligence},
+  journal   = {Nature neuroscience},
+  year      = {2003},
+  volume    = {6},
+  number    = {3},
+  pages     = {316},
+  publisher = {Nature Publishing Group},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
