--- a/2019_neurips_vigil/model.tex
+++ b/2019_neurips_vigil/model.tex
@@ -8,8 +8,8 @@ All those modules are described below.
 
 \subsection{Question-driven Controller}
 \subsection{Visual Retrievial Unit}
-\subsection{Reasoning unit}
-\subsection{Memory update}
+\subsection{Reasoning Unit}
+\subsection{Memory update Unit}
 \subsection{Summary Object Udpate Unit}
 \subsection{Question Encoder}
 \subsection{Image Encoder}
