--- a/2019_neurips_vigil/model.tex
+++ b/2019_neurips_vigil/model.tex
@@ -1,8 +1,7 @@
 \section{Model}
 
-
 Selective Attention Memory Network (SAMNet) is a end-to-end differentiable model made for video reasoning. It is a model based on attention mechanisms but also on a Selective Attention Memory which is able to store selected entities. This memory enables SAMNet to reason across multiple frames and perform spatio-temporal reasoning. 
-The core of SAMNet is based a recurrent cell called SAMCell. By aligning together a series of k SAMCells, the network can perform k reasoning steps. At every reasoning step the attention on the image and the question is updated. This section describes the model and the different units that composed a SAMCell. They are called the Question-driven Controller, the Visual Retrievial unit, the Memory Retrieval unit, the Reasoning unit, the Memory update unit, and the Summary Object Udpate unit. 
+The core of SAMNet is based a recurrent cell called SAMCell. By aligning together a series of k SAMCells per frame, the network can perform k reasoning steps over a frame. At every new frame, a new series of k SAMCells is initiated. The SAMCell can read and write to memory at every frame using a content addressable mechanism. This section describes the model and the different units that composed a SAMCell. They are called the Question-driven Controller, the Visual Retrievial Unit, the Memory Retrieval Unit, the Reasoning unit, the Memory update unit, and the Summary Object Udpate Unit. 
 The model is also composed of an Image Encoder and a Question Encoder both responsible to pre-process the visual and textual inputs. The output unit is a classifier.
 All those modules are described below.
 
