--- a/cog_bibliography.bib
+++ b/cog_bibliography.bib
@@ -1,3 +1,16 @@
+@Article{•,
+author = {•},
+title = {•},
+journal = {•},
+year = {•},
+OPTkey = {•},
+OPTvolume = {•},
+OPTnumber = {•},
+OPTpages = {•},
+OPTmonth = {•},
+OPTnote = {•},
+OPTannote = {•}
+}
 % Encoding: UTF-8
 
 @InProceedings{haurilet2019s,
