--- a/2019_neurips_vigil/vigil_2019_main.tex
+++ b/2019_neurips_vigil/vigil_2019_main.tex
@@ -1,10 +1,13 @@
 \documentclass{article}
-\usepackage[final]{neurips_2019}
+\usepackage{neurips_2019}
 
 \usepackage[utf8]{inputenc} % allow utf-8 input
 \usepackage[T1]{fontenc}    % use 8-bit T1 fonts
 \usepackage[usenames, svgnames]{xcolor}
 \usepackage{hyperref}       % hyperlinks
+\usepackage{bchart}
+\usepackage{pgfplots}
+\pgfplotsset{width=7 cm,compat=1.5}
 \hypersetup{
 	colorlinks=true,
 	linkcolor={red!80!black},
@@ -97,6 +100,16 @@
 \begin{document}
 
 \maketitle
+\begin{abstract}
+	Learning to reason on a frame by frame basis using Selective Attention Memory. 
+\end{abstract}
+	
+
+	
+
+
+
+
 
 \input{intro}
 
